Edited bsg-carousel.css to avoid images overflowing screen
git-svn-id: https://plugins.svn.wordpress.org/bootstrap-swipe-gallery/tags/1.0.1@988784 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/bsg-carousel.css
+++ b/css/bsg-carousel.css
@@ -59,6 +59,7 @@
 }
 
 .gallery-modal .carousel.carousel-gallery .carousel-inner .item {
+  max-height : 80% ; 
   width : auto ; 
   position : relative ;
   background-color : #111 ;  
